--- a/src/components/BlogStripe.astro
+++ b/src/components/BlogStripe.astro
@@ -5,7 +5,7 @@
 
 <div class="blog_stripe">
     <div class="ctnr">
-        <h3><sup>The Clean Network</sup> Blog</h3>
+        <h3><sup>The Clean Network's</sup> Blog</h3>
     
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <b>Velit et distinctio eius, est repellat similique iste, sint maiores illum magnam in!</b> Ut nemo deserunt magnam dignissimos. Laborum quos ipsum illum?</p>
     
@@ -17,7 +17,7 @@
     .blog_stripe {
         background-color: var(--light-a);
         text-align: center;
-        padding-block: clamp(5rem, 4vw, 8rem);
+        padding-block: clamp(5rem, 4vw, 6rem);
         border-block: 1.4rem solid var(--primary-e);
         display: none;
     }
