--- a/src/components/ContactBox.astro
+++ b/src/components/ContactBox.astro
@@ -35,8 +35,10 @@ import { TEL, TEL_HREF, EMAIL } from "../consts";
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        font-size: clamp(1rem,4vmin,1.7rem);
+        font-size: clamp(1rem,4vmin,1.6rem);
         line-height: 1.5;
+        font-weight: 300;
+        letter-spacing: 0.1rem;
     }
     
     .contact_box a {
