--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -79,11 +79,15 @@ import { FOOTER_DESCRIPTION, STREET, POSTAL_CODE, TEL } from "../consts";
 
     footer .content p {
         max-width: 38rem;
+        font-weight: 300;
+        letter-spacing: 0.1rem;
+        letter-spacing: 0.05rem;
     }
 
     footer .legal {
         font-style: italic;
         color: var(--light-b);
+        font-weight: 400;
     }
 
     footer nav {
@@ -98,6 +102,8 @@ import { FOOTER_DESCRIPTION, STREET, POSTAL_CODE, TEL } from "../consts";
         display: flex;
         align-items: center;
         gap:1rem;
+        font-weight: 300;
+        letter-spacing: 0.06rem;
     }
 
     footer nav a span {
