--- a/src/pages/sectors/index.astro
+++ b/src/pages/sectors/index.astro
@@ -67,7 +67,7 @@ import { SITE_KEYWORDS, SECTORS_TITLE, SECTORS_DESCRIPTION, SECTORS_KEYWORDS, SE
                                         </div>
                                         
                                         <a href={`/sectors/${sectors.slug}`} class="image" aria-label={`Read more about ${sectors.data.title}`}  title={`Read more about ${sectors.data.title}`}>
-                                            <img src={sectors.data.image} loading="lazy" alt={`Photo of ${sectors.data.title} cleaning`}/>
+                                            <img src={sectors.data.image} loading="lazy" alt={`Photo of ${sectors.data.title} cleaning`} draggable="false"/>
                                         </a>
                                     </div>
                                 </section>
