--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -82,7 +82,7 @@ import { SITE_KEYWORDS, SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS,
                                             </div>
                                             
                                             <a href={`/services/${services.slug}`} class="image" aria-label={`Read more about ${services.data.title}`} title={`Read more about ${services.data.title} Cleaning Services`}>
-                                                <img src={services.data.image} loading="lazy" alt={`Photo of ${services.data.title} cleaning service`}/>
+                                                <img src={services.data.image} loading="lazy" alt={`Photo of ${services.data.title} cleaning service`} draggable="false"/>
                                             </a>
                                         </div>
                                     </section>
@@ -124,7 +124,7 @@ import { SITE_KEYWORDS, SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS,
                                             </div>
                                             
                                             <a href={`/services/${services.slug}`} class="image" aria-label={`Read more about ${services.data.title}`} title={`Read more about ${services.data.title} Cleaning Services`}>
-                                                <img src={services.data.image} loading="lazy" alt={`Photo of ${services.data.title} cleaning service`}/>
+                                                <img src={services.data.image} loading="lazy" alt={`Photo of ${services.data.title} cleaning service`} draggable="false"/>
                                             </a>
                                         </div>
                                     </section>
