--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -1,5 +1,5 @@
 .read_more {
-    margin-top: 1rem;
+    margin-top: clamp(0.6rem, 1vw, 1rem);
     display: inline-block;
     font-size: clamp(1.3rem, 3.5vw, 1.6rem);
     color: var(--primary-d);
