--- a/src/styles/blog-collection.css
+++ b/src/styles/blog-collection.css
@@ -309,6 +309,58 @@ section.intro {
     -o-transition: background-color 0s ease, border-color 0s ease;
 }
 
+.blog_nav {
+    margin-block: 7rem;
+    text-align: center;
+    position: sticky;
+    bottom: 1.5rem;
+    padding: 1.5rem;
+    backdrop-filter: blur(1rem);
+    border: 0.1rem solid var(--light);
+    border-radius: 0.4rem;
+    background-color: rgba(255,255,255,0.6);
+    box-sizing: border-box;
+    width: fit-content;
+    margin-inline: auto;
+}
+
+.blog_nav .flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1.4rem;
+}
+
+.blog_nav a {
+    font-size: clamp(1.6rem, 4vw, 1.7rem);
+    padding: 1rem 1.7rem;
+    background-color: var(--primary-e);
+    border-radius: 0.3rem;
+    border: 0.1rem solid var(--primary-d);
+    min-width: clamp(4rem, 20vw, 13rem);
+    color: var(--light);
+    font-weight: 400;
+}
+
+.blog_nav a.disabled {
+    background-color: var(--light-a);
+    border-color: transparent;
+    pointer-events: none;
+    color: var(--light-b);
+}
+
+.blog_nav .counter {
+    font-weight: 500;
+    font-size: clamp(1.5rem, 4.5vw, 1.6rem);
+    color: var(--primary-e);
+}
+
+.counter_title {
+    margin-block: 10rem 2rem;
+    font-size: clamp(1.2rem, 6vw, 3rem);
+    color: var(--primary-e);
+}
 
 
 
