--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -88,7 +88,7 @@
     width: clamp(9rem, 91vw, 87rem);
     margin-inline: auto;
     margin-bottom: clamp(4rem,18vw,6rem);
-    margin-top: calc(clamp(10rem, 55vw, 50rem) * -1);
+    margin-top: calc(clamp(10rem, 62vw, 50rem) * -1);
     background-color: rgb(248 248 255 / 85%);
     backdrop-filter: blur(0.5rem);
     border-radius: 1.2rem;
@@ -148,7 +148,7 @@ article h1 {
 
 .content_ctnr .post_content p {
     margin-bottom: 1rem;
-    line-height: 1.65;
+    line-height: 1.55;
 }
 
 .content_ctnr .post_content p strong, .content_ctnr .post_content p em {
@@ -241,7 +241,7 @@ article img {
 
 .recommendations ul li > .ctnr {
     display: flex;
-    gap: 2rem;
+    gap: clamp(1rem, 4vw, 3rem);
     justify-content: space-between;
 }
 
@@ -271,7 +271,7 @@ article img {
 }
 
 .recommendations .description {
-    font-size: clamp(1.2rem, 3vw, 1.6rem);
+    font-size: clamp(1.2rem, 3vw, 1.5rem);
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
