--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -17,8 +17,8 @@ time {
     display: flex;
     align-items: center;
     flex-flow: row wrap;
-    gap: 0 0.7rem;
-    margin-bottom: 0.4rem;
+    gap: 0.2rem 0.7rem;
+    margin-bottom: 0.6rem;
     font-size: clamp(1.2rem, 3vw, 1.3rem);
 }
 
@@ -51,86 +51,6 @@ a.category_indicator:hover {
 .author cite {
     color: var(--dark-a);
     font-style: normal;
-}
-
-.category_nav {
-    margin-bottom: 4rem;
-}
-
-.category_nav .flex {
-    justify-content: center;
-    gap: 2rem;
-}
-
-.category_nav a {
-    flex: 1;
-    padding: clamp(1rem, 3vw, 3rem) clamp(1rem, 2vw, 3rem);
-    font-size: clamp(1.3rem, 4vw, 1.6rem);
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-    color: var(--grey-a);
-    border-radius: 0.3rem;
-    background-color: var(--light-d);
-    gap: 1rem;
-    border: 0.2rem solid var(--light-d);
-    transition: background-color 0.3s ease;
-    -webkit-transition: background-color 0.3s ease;
-    -moz-transition: background-color 0.3s ease;
-    -ms-transition: background-color 0.3s ease;
-    -o-transition: background-color 0.3s ease;
-}
-
-.category_nav a:hover {
-    background-color: var(--light);
-    transition: background-color 0s ease;
-    -webkit-transition: background-color 0s ease;
-    -moz-transition: background-color 0s ease;
-    -ms-transition: background-color 0s ease;
-    -o-transition: background-color 0s ease;
-}
-
-.category_nav a::before {
-    content:'';
-    position: relative;
-    width: 0.4rem;
-    height: 0.4rem;
-    border-left: 0.3rem solid;
-    border-bottom: 0.3rem solid;
-    border-color: var(--light-b);
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-}
-
-.category_nav a:last-of-type {
-    flex-direction: row-reverse;
-    justify-content: flex-end;
-    border-radius: 0 0 0 1rem;
-    -webkit-border-radius: 0 0 0 1rem;
-    -moz-border-radius: 0 0 0 1rem;
-    -ms-border-radius: 0 0 0 1rem;
-    -o-border-radius: 0 0 0 1rem;
-}
-
-.category_nav a:last-of-type:before {
-    transform: rotate(-135deg);
-    -webkit-transform: rotate(-135deg);
-    -moz-transform: rotate(-135deg);
-    -ms-transform: rotate(-135deg);
-    -o-transform: rotate(-135deg);
-}
-
-.category_nav a:first-of-type {
-    text-align: right;
-    justify-content: right;
-    border-radius: 0 1rem 0 0;
-    -webkit-border-radius: 0 1rem 0 0;
-    -moz-border-radius: 0 1rem 0 0;
-    -ms-border-radius: 0 1rem 0 0;
-    -o-border-radius: 0 1rem 0 0;
 }
 
 .tags {
