--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -42,8 +42,8 @@ import { Schema } from "astro-seo-schema"
 			{
 				page.data.map((post) => (
 					<>
-						<li id={(post.data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top reveal">
-							<div class="ctnr">
+						<li id={(post.data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top">
+							<div class="ctnr reveal">
 								<div class="content">
 									<div class="ctnr">
 										<div class="over_heading">
